--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <div class="video-card">
-    <video src="hello.mp4" poster="vcover.png" autoplay loop controls></video>
+    <video src="hello.mp4" poster="vcover.jpg" autoplay loop controls></video>
     <div class="overlay">❤️ Love Moments ❤️</div>
   </div>
 </body>
